--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -20,19 +20,9 @@
   width: 100%;
   height: 100px;
   border-top: 1px solid #eaeaea;
-  display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
 }
 
 .title a {
@@ -76,27 +66,39 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  width: 800px;
   max-width: 800px;
-  margin-top: 3rem;
+  margin-top: 1rem;
+}
+
+.input {
+  color: inherit;
+  padding: 1rem;
+  border-radius: 10px;
+  text-decoration: none;
+  text-align: center;
+  border: 1px solid #0070f3;
+  transition: color 0.15s ease, border-color 0.15s ease;
 }
 
 .card {
-  margin: 1rem;
-  flex-basis: 45%;
   padding: 1.5rem;
-  text-align: left;
+  text-align: center;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid transparent;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+.card h3 {
+  text-decoration: underline;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
   color: #0070f3;
-  border-color: #0070f3;
 }
 
 .card h3 {
