--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -86,13 +86,18 @@
   text-align: center;
   color: inherit;
   text-decoration: none;
-  border: 1px solid transparent;
+  font-size: 1.5rem;
+  border: 1px solid #0070f3;
+  margin: 25px;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
-.card h3 {
-  text-decoration: underline;
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .card:hover,
