--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -82,13 +82,14 @@
 }
 
 .card {
-  padding: 1.5rem;
+  padding: 1rem;
   text-align: center;
   color: inherit;
+  width: 200px;
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   border: 1px solid #0070f3;
-  margin: 25px;
+  margin: 10px;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
 }
@@ -104,11 +105,6 @@
 .card:focus,
 .card:active {
   color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
 }
 
 .card p {
