feat: add `witness by` line

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -52,6 +52,16 @@
   font-size: 1.5rem;
 }
 
+.small {
+  line-height: 1.5;
+  font-size: 1.5rem;
+  font-weight: lighter;
+}
+
+.small a {
+  text-decoration: underline;
+}
+
 .code {
   background: #fafafa;
   border-radius: 5px;
