--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -83,19 +83,27 @@
 
 .input {
   color: inherit;
+  width: 350px;
   padding: 1rem;
   border-radius: 10px;
   text-decoration: none;
+  font-size: 1.2rem;
+  line-height: 1.5;
   text-align: center;
   border: 1px solid #0070f3;
   transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+.input::placeholder {
+  font-size: 1.2rem;
+  line-height: 1.5;
 }
 
 .card {
   padding: 1rem;
   text-align: center;
   color: inherit;
-  width: 200px;
+  width: 350px;
   text-decoration: none;
   font-size: 1.2rem;
   border: 1px solid #0070f3;
