--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -65,10 +65,17 @@
 .code {
   background: #fafafa;
   border-radius: 5px;
+  margin: 10px;
   padding: 0.75rem;
   font-size: 1.1rem;
+  line-height: 1.5;
+  text-align: center;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
+}
+
+.code a {
+  text-decoration: underline;
 }
 
 .grid {
