--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,7 +8,7 @@
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -101,6 +101,10 @@
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
+.image {
+  margin-top: 2rem;
+}
+
 .input::placeholder {
   font-size: 1.2rem;
   line-height: 1.5;
@@ -139,13 +143,226 @@
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-}
-
+/* Really need to improve this... */
 @media (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .title {
+    font-size: 3.2rem;
+  }
+
+  .h2 {
+    font-size: 1.2rem;
+  }
+
+  .description {
+    font-size: 1.2rem;
+  }
+
+  .code {
+    margin: 8px;
+    padding: 0.5rem;
+    font-size: 0.8rem;
+  }
+
+  .small {
+    font-size: 1.3rem;
+  }
+
+  .image {
+    width: 150px;
+    margin-top: 3rem;
+  }
+
+  .card {
+    padding: 0.8rem;
+    width: 300px;
+    font-size: 1rem;
+    line-height: 1.2;
+    margin: 8px;
+  }
+
+  .input {
+    padding: 0.8rem;
+    width: 300px;
+    font-size: 1rem;
+    line-height: 1.2;
+    margin: 8px;
+  }
+
+  .input::placeholder {
+    font-size: 1rem;
+    line-height: 1.2;
+  }
+
+  .footer {
+    font-size: 0.8rem;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .title {
+    font-size: 2.8rem;
+  }
+
+  .h2 {
+    font-size: 1rem;
+  }
+
+  .description {
+    font-size: 1rem;
+  }
+
+  .code {
+    margin: 6px;
+    padding: 0.4rem;
+    font-size: 0.7rem;
+  }
+
+  .small {
+    font-size: 1.1rem;
+  }
+
+  .image {
+    width: 125px;
+    margin-top: 2rem;
+  }
+
+  .card {
+    padding: 0.7rem;
+    width: 280px;
+    font-size: 0.9rem;
+    line-height: 1.1;
+    margin: 7px;
+  }
+
+  .input {
+    padding: 0.7rem;
+    width: 280px;
+    font-size: 0.9rem;
+    line-height: 1.1;
+    margin: 7px;
+  }
+
+  .input::placeholder {
+    font-size: 0.9rem;
+    line-height: 1.1;
+  }
+
+  .footer {
+    font-size: 0.7rem;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .title {
+    font-size: 2rem;
+  }
+
+  .h2 {
+    font-size: 0.7rem;
+  }
+
+  .description {
+    font-size: 0.7rem;
+  }
+
+  .code {
+    margin: 2px;
+    padding: 0.2rem;
+    font-size: 0.5rem;
+  }
+
+  .small {
+    font-size: 0.7rem;
+  }
+
+  .image {
+    width: 100px;
+    margin-top: 2rem;
+  }
+
+  .card {
+    padding: 0.5rem;
+    width: 250px;
+    font-size: 0.7rem;
+    line-height: 1.1;
+    margin: 7px;
+  }
+
+  .input {
+    padding: 0.5rem;
+    width: 250px;
+    font-size: 0.7rem;
+    line-height: 1.1;
+    margin: 7px;
+  }
+
+  .input::placeholder {
+    font-size: 0.7rem;
+    line-height: 1.1;
+  }
+
+  .footer {
+    font-size: 0.5rem;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .title {
+    font-size: 1.5rem;
+  }
+
+  .h2 {
+    font-size: 0.6rem;
+  }
+
+  .description {
+    font-size: 0.6rem;
+  }
+
+  .code {
+    margin: 0px;
+    padding: 0.1rem;
+    font-size: 0.4rem;
+  }
+
+  .small {
+    font-size: 0.6rem;
+  }
+
+  .image {
+    width: 100px;
+    margin-top: 1rem;
+  }
+
+  .card {
+    padding: 0.5rem;
+    width: 250px;
+    font-size: 0.6rem;
+    line-height: 1.1;
+    margin: 5px;
+  }
+
+  .input {
+    padding: 0.5rem;
+    width: 250px;
+    font-size: 0.6rem;
+    line-height: 1.1;
+    margin: 5px;
+  }
+
+  .input::placeholder {
+    font-size: 0.7rem;
+    line-height: 1.1;
+  }
+
+  .footer {
+    font-size: 0.5rem;
   }
 }
